syntax = "proto3";
package flux.streams;

service StreamsService {
    rpc GetLastStreams(GetLastStreamsRequest) returns (GetLastStreamsResponse);
    rpc GetUserStreams(GetUserStreamsRequest) returns (GetUserStreamsResponse);
    rpc GetStreams(GetStreamsRequest) returns (GetStreamsResponse);
}

message GetLastStreamsRequest {
    optional string locale = 101;
}

message GetLastStreamsResponse {
    repeated string stream_ids = 1;
}

message GetUserStreamsRequest {
    optional string user_id = 1;
}

message GetUserStreamsResponse {
    repeated string stream_ids = 1;
}

message GetStreamsRequest {
    repeated string stream_ids = 1;
}

message GetStreamsResponse {
    repeated Stream streams = 1;

    message Stream {
        optional string stream_id = 1;
        optional string message_id = 2;
        optional string text = 3;
        repeated string user_ids = 4;
    }
}

message SummarizeStreamRequest {
    optional string stream_id = 1;
    repeated Message messages = 2;
    optional int64 version = 3;

    message Message {
        optional string message_id = 1;
        optional string user_id = 2;
    }
}

message SummarizeStreamResponse {
    optional string stream_id = 1;
    optional string text = 2;
    optional int64 version = 3;
}
